[package]
name = "clima"
version = "1.0.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/clima"
description = "A minimal Markdown reader in the terminal"
edition = "2018"
keywords = ["cli", "markdown"]
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.58"

[dependencies]
clap = "2.33"
cli-log = "2.0"
crossterm = "0.23.2"
custom_error = "1.9"
lazy-regex = "2.2.2"
lazy_static = "1.4"
reqwest = { version = "0.11.9", default-features=false, features = ["blocking", "rustls-tls"]}
termimad = "0.20.2"
terminal-light = "1.0.0"

[profile.release]
debug = false
lto = true
strip = true

[patch.crates-io]
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# terminal-light = { path = "../terminal-light" }
# crossterm = { path = "../crossterm-rs/crossterm" }
